<resources>
    <string name="app_name">TechSurvey</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Próximo</string>
    <string name="previous">Voltar</string>
    <string name="follow">Seguir</string>

    <string name="required_company">O nome da empresa é obrigatório</string>
    <string name="required_role">O cargo é obrigatório</string>
    <string name="required_area">A área é obrigatória</string>
    <string name="required_name">O nome é obrigatório</string>

    <string name="label_qr_code_reading_instruction">Aponte a câmera para o código</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_welcome">OLÁ! \n\nFAÇA UM TESTE AGORA E DESCUBRA QUAL É O</string>
    <string name="label_continue"><b>PERFIL DA SUA EMPRESA.</b></string>
    <string name="begin_test">Iniciar Teste</string>
    <string name="label_accept_proceed">Eu aceito prossegir</string>
    <string name="label_refuse_proceed">Eu não aceito prosseguir</string>
    <string name="label_meet">Primeiro é importante nos conhecermos! \n\nMas antes disso, valorizamos sua confiança em nosso aplicativo e estamos empenhados em fornecer uma experiência segura e em conformidade com a LGPD durante o teste.</string>
    <string name="label_lets_go">Vamos lá!</string>
    <string name="label_lastly">E por último:</string>
    <string name="hint_company_name">Digite o nome fantasia</string>
    <string name="hint_user_name">Escreva aqui e pressione</string>
    <string name="label_ask_user_name">Então, qual o seu nome completo?</string>
    <string name="label_ask_company_name">E o nome da sua empresa?</string>
    <string name="hint_role">Digite o cargo</string>
    <string name="label_ask_role">Qual é o seu cargo na empresa?</string>
    <string name="hint_area">Digite a área</string>
    <string name="label_ask_area">E a área?</string>
    <string name="hint_email">Digite apenas e-mail comercial</string>
    <string name="label_ask_email">Qual é o seu e-mail comercial?</string>
    <string name="hint_phone">(00) 00000-0000</string>
    <string name="label_ask_phone">Telefone?</string>
    <string name="label_already">Pronto! \n\nAgora vamos às questões para criarmos o perfil de sua empresa.</string>

    <string name="required_email">Informe um e-mail corporativo válido</string>
    <string name="required_phone">Informe um formato de telefone válido</string>

    <!--    Questão 1-->
    <string name="text_ask_one">1. Em qual estágio a sua empresa encontra-se para _______</string>
    <string name="text_ask_one_option_one">1. Tem atividades já desenvolvidas</string>
    <string name="text_ask_one_option_two">2. Tem atividades ainda em desenvolvimento interno, sem produtos / serviços / soluções formatadas</string>
    <string name="text_ask_one_option_three">3. Não há atividades, mas esse tema é pauta na empresa</string>

    <!--    Questão 2-->
    <string name="text_ask_two">2. Atualmente, em qual ETAPA entende que a sua empresa está quando falamos de</string>
    <string name="text_ask_two_option_one">1. Planejamento</string>
    <string name="text_ask_two_option_two">2. Preparar, adequar</string>
    <string name="text_ask_two_option_three">3. Desenvolver soluções</string>
    <string name="text_ask_two_option_four">4. Viabilizar, lançar soluções</string>
    <string name="text_ask_two_option_five">5. Rentabilizar soluções já lançadas</string>
    <string name="text_ask_two_option_six">6. Não sei</string>
    <string name="text_ask_two_option_seven">7. Não se aplica</string>

    <!--    Questão 3-->
    <string name="text_ask_three">3. Em uma escala de 1 a 5, em que 1 é nada e 5 é muito, você diria que a sua empresa:</string>
    <string name="text_ask_three_option_one">a) Faz uma comunicação sobre [TRAZER OU CONCATENAR ALTERNATIVAS P.1] direcionada aos CLIENTES FINAIS.</string>
    <string name="text_ask_three_option_two">b) Faz uma comunicação sobre [TRAZER OU CONCATENAR ALTERNATIVAS P.1] direcionada a outros STAKEHOLDERS (acionistas, investidores, parceiros ou outros)?</string>

    <!--    Questão 4-->
    <string name="text_ask_four">4.	Há metas de desempenho na sua empresa voltadas para os impactos do(a)</string>
    <string name="text_ask_four_option_one">1. Sim</string>
    <string name="text_ask_four_option_two">2. Não</string>
    <string name="text_ask_four_option_three">3. Não sei</string>
    <string name="text_ask_four_option_four">4. Não se aplica</string>

    <!--    Questão 5-->
    <string name="text_ask_five">5.	Há uma área específica ou pessoas dedicadas a</string>
    <string name="text_ask_five_option_one">1. Sim</string>
    <string name="text_ask_five_option_two">2. Não</string>
    <string name="text_ask_five_option_three">3. Não sei</string>

    <!--    Questão 6-->
    <string name="text_ask_six">6. Em uma escala de 1 a 5, em que 1 é nada e 5 é muito, você diria que a sua empresa:</string>
    <string name="text_ask_six_option_one">a) Faz uma comunicação sobre [TRAZER OU CONCATENAR ALTERNATIVAS P.1] direcionada aos CLIENTES FINAIS.</string>
    <string name="text_ask_six_option_two">b) Faz uma comunicação sobre [TRAZER OU CONCATENAR ALTERNATIVAS P.1] direcionada a outros STAKEHOLDERS (acionistas, investidores, parceiros ou outros)?</string>

    <!--    Questão 7-->
    <string name="text_ask_seven">7. O quanto você concorda com as frases abaixo?</string>
    <string name="text_ask_seven_option_one">a) A empresa tem hoje novas fontes de receita que surgiram com [TRAZER OU CONCATENAR ALTERNATIVAS P.1]</string>
    <string name="text_ask_seven_option_two">b) A empresa está conseguindo monetizar investimentos em tecnologia ligados a(ao) [TRAZER OU CONCATENAR ALTERNATIVAS P.1]</string>
    <string name="text_ask_seven_option_three">c) Houve um aumento no volume de negócios por conta do(a) [TRAZER OU CONCATENAR ALTERNATIVAS P.1] </string>
    <string name="text_ask_seven_option_four">d) [TRAZER OU CONCATENAR ALTERNATIVAS P.1] mudou a visão da empresa de foco em produtos/serviços para foco na experiência do cliente</string>
    <string name="text_ask_seven_option_five">e) A sua empresa está utilizando todo o potencial do [TRAZER OU CONCATENAR ALTERNATIVAS P.1] no momento</string>
    <string name="text_ask_seven_option_six">f) [TRAZER OU CONCATENAR ALTERNATIVAS P.1] está ajudando a atingir os objetivos da empresa</string>

    <!--    Opções Múltiplas-->
    <string name="text_multiple_options_one">Discordo totalmente</string>
    <string name="text_multiple_options_two">Discordo parcialmente</string>
    <string name="text_multiple_options_three">Nem concordo, nem discordo</string>
    <string name="text_multiple_options_four">Concordo parcialmente</string>
    <string name="text_multiple_options_five">Concordo totalmente</string>
    <string name="text_multiple_options_six">Não sei</string>
    <string name="text_multiple_options_seven">Não se aplica</string>
    <string name="text_privacy">Política de Privacidade</string>


</resources>