<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactFragment"
    android:clipToPadding="false"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default"
        >

        <ImageView
            android:id="@+id/iv_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/mask_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/cap_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_lets_go"
            style="@style/TextStyleUbuntuLightCenteredWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:text="@string/label_lastly"
            android:textAlignment="center"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@id/tv_ask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ask"
            style="@style/TextStyleUbuntuLightCenteredWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/label_ask_company_name"
            android:textSize="38sp"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_go" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_company"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_company_name"
            app:layout_constraintTop_toBottomOf="@id/tv_ask">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_company"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_role"
            style="@style/TextStyleUbuntuLightCenteredWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/label_ask_role"
            android:textSize="38sp"
            app:layout_constraintTop_toBottomOf="@id/il_company" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_role"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_role"
            app:layout_constraintTop_toBottomOf="@id/tv_role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_role"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_next"
            style="@style/CustomOutlinedButtonStyle"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_role" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_back"
            style="@style/CustomOutlinedButtonStyle"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_role" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>