<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.questions.QuestionOneFragment"
    android:background="@drawable/bg_default">

    <ImageView
        android:id="@+id/iv_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/mask_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/TextStyleUbuntuLightCenteredWhite"
        android:id="@+id/tv_ask_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_ask_one"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/rg_question_one"/>

    <RadioGroup
        android:id="@+id/rg_question_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/iv_mask"
        app:layout_constraintEnd_toEndOf="@id/tv_ask_one"
        app:layout_constraintStart_toStartOf="@id/tv_ask_one"
        app:layout_constraintTop_toBottomOf="@id/tv_ask_one"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button1"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ask_one_option_one"
            android:textSize="25sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button2"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ask_one_option_two"
            android:textSize="25sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button3"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ask_one_option_three"
            android:textSize="25sp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/cap_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_next"
        style="@style/CustomOutlinedButtonStyle"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_back"
        style="@style/CustomOutlinedButtonStyle"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/cian_blue"
        app:layout_constraintBottom_toBottomOf="@+id/bt_next"
        app:layout_constraintEnd_toEndOf="@+id/bt_next"
        app:layout_constraintStart_toStartOf="@+id/bt_next"
        app:layout_constraintTop_toTopOf="@+id/bt_next"
        />

    <ImageView
        android:id="@+id/iv_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:src="@drawable/ic_reset"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>