<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecurityFragment"
    android:background="@drawable/bg_default"
    >

    <ImageView
        android:id="@+id/iv_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@color/mask_black"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cap_logo"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/tv_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_lock"
        android:textSize="40sp"
        android:fontFamily="@font/ubuntu_light"
        android:textColor="@color/white"
        android:text="@string/label_meet"
        android:textAlignment="center"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView
        android:id="@+id/iv_lock"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toBottomOf="@id/bt_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_meet"
        android:src="@drawable/ic_outline_lock"
        android:layout_marginHorizontal="100dp"
        />

    <TextView
        android:id="@+id/tv_security_therms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_privacy"
        android:textColor="@color/cian_blue"
        android:textSize="27sp"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/CustomOutlinedButtonStyle"
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_accept_proceed"
        android:fontFamily="@font/ubuntu_light"
        android:textAllCaps="false"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@id/iv_lock"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="100dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_refuse"
        style="@style/CustomTransparentButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/label_refuse_proceed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/iv_logo"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_security_therms"
        tools:layout_editor_absoluteX="100dp" />







</androidx.constraintlayout.widget.ConstraintLayout>